--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
+  "homepage": "https://rardan97.github.io/portfolio",
   "name": "portfolio_v1",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "homepage": "https://rardan97.github.io",
+  "type": "module",  
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
